# wedding

./: .editorconfig  .env  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  renovate.json
.github/workflows/: main.yml
.sqlx/: query-0ef42e531f08c28649b918729b0b47a04c3d47d7df60773879ce5838773eb7c6.json
migrations/: 20240428152312_invitations.sql
src/: app.rs  db.rs  main.rs
src/routes/: index.rs  mod.rs  rsvp.rs  rsvp_confirm.rs
templates/: base.html  index.html  rsvp.html
