[package]
name = "wedding"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.5"
serde = "1.0.199"
time = "0.3.36"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs"] }
tower-sessions = "0.12.2"
tracing-subscriber = "0.3.18"
